// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno init 1`] = `
stdout: |2
   SUCCESS  Cirno environment initialized at /data.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: apps
    entries: []
  - type: directory
    name: baka
    entries: []
  - type: file
    name: cirno-baka.br
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps: []
  - type: directory
    name: home
    entries:
      - type: directory
        name: .yarn
        entries:
          - type: directory
            name: cache
            entries: []
          - type: directory
            name: releases
            entries: []
      - type: file
        name: .yarnrc.yml
        content: |
          enableTips: false

          nodeLinker: pnp
  - type: directory
    name: tmp

`;

exports[`step 2: cirno import /fixtures/bar 1`] = `
stdout: |
  ➤ YN0000: · Yarn 4.2.2
  ➤ YN0000: ┌ Resolution step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Fetch step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Link step
  ➤ YN0000: └ Completed
  ➤ YN0000: · Done
   SUCCESS  Successfully imported instance cd5fbb72.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: apps
    entries:
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTelemetry: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: baka
    entries: []
  - type: file
    name: cirno-baka.br
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: bar
          created: '<timestamp>'
          backups: []
  - type: directory
    name: home
    entries:
      - type: directory
        name: .yarn
        entries:
          - type: directory
            name: cache
            entries:
              - type: file
                name: '@types-emscripten-npm-1.39.13-baf7427522-10c0.zip'
              - type: file
                name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-10c0.zip'
              - type: file
                name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-10c0.zip'
              - type: file
                name: tslib-npm-2.6.3-0fd136b3be-10c0.zip
          - type: directory
            name: index
          - type: directory
            name: releases
            entries:
              - type: file
                name: yarn-4.2.2.cjs
      - type: file
        name: .yarnrc.yml
        content: |
          enableTips: false

          nodeLinker: pnp
  - type: directory
    name: tmp

`;

exports[`step 3: cirno export <#1> /exports/bar.zip 1`] = `
stdout: |2
   SUCCESS  Successfully exported instance cd5fbb72 to /exports/bar.zip (1.3 MB).
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: apps
    entries:
      - type: directory
        name: cd5fbb72
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTelemetry: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: baka
    entries: []
  - type: file
    name: cirno-baka.br
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: cd5fbb72
          name: bar
          created: '<timestamp>'
          backups: []
  - type: directory
    name: home
    entries:
      - type: directory
        name: .yarn
        entries:
          - type: directory
            name: cache
            entries:
              - type: file
                name: '@types-emscripten-npm-1.39.13-baf7427522-10c0.zip'
              - type: file
                name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-10c0.zip'
              - type: file
                name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-10c0.zip'
              - type: file
                name: tslib-npm-2.6.3-0fd136b3be-10c0.zip
          - type: directory
            name: index
          - type: directory
            name: releases
            entries:
              - type: file
                name: yarn-4.2.2.cjs
      - type: file
        name: .yarnrc.yml
        content: |
          enableTips: false

          nodeLinker: pnp
  - type: directory
    name: tmp

`;

exports[`step 4: cirno remove <#1> 1`] = `
stdout: |2
   SUCCESS  Instance cd5fbb72 is successfully removed.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: apps
    entries: []
  - type: directory
    name: baka
    entries: []
  - type: file
    name: cirno-baka.br
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps: []
  - type: directory
    name: home
    entries:
      - type: directory
        name: .yarn
        entries:
          - type: directory
            name: cache
            entries: []
          - type: directory
            name: index
          - type: directory
            name: releases
            entries: []
      - type: file
        name: .yarnrc.yml
        content: |
          enableTips: false

          nodeLinker: pnp
  - type: directory
    name: tmp

`;

exports[`step 5: cirno import /exports/bar.zip 1`] = `
stdout: |
  ➤ YN0000: · Yarn 4.2.2
  ➤ YN0000: ┌ Resolution step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Fetch step
  ➤ YN0000: └ Completed
  ➤ YN0000: ┌ Link step
  ➤ YN0000: └ Completed
  ➤ YN0000: · Done
   SUCCESS  Successfully imported instance 5ab7bff9.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: apps
    entries:
      - type: directory
        name: 5ab7bff9
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableTelemetry: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: baka
    entries: []
  - type: file
    name: cirno-baka.br
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      config: {}
      apps:
        - id: 5ab7bff9
          name: bar
          created: '<timestamp>'
          backups: []
  - type: directory
    name: home
    entries:
      - type: directory
        name: .yarn
        entries:
          - type: directory
            name: cache
            entries:
              - type: file
                name: '@types-emscripten-npm-1.39.13-baf7427522-10c0.zip'
              - type: file
                name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-10c0.zip'
              - type: file
                name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-10c0.zip'
              - type: file
                name: tslib-npm-2.6.3-0fd136b3be-10c0.zip
          - type: directory
            name: index
          - type: directory
            name: releases
            entries:
              - type: file
                name: yarn-4.2.2.cjs
      - type: file
        name: .yarnrc.yml
        content: |
          enableTips: false

          nodeLinker: pnp
  - type: directory
    name: tmp

`;
